# RAGonOBsidian

./: .gitignore  app.py  main_app.py  pyproject.toml  readme.md  rreadme.md
