[tool.poetry]
name = "knowledgebaserag"
version = "0.1.0"
description = ""
authors = ["Anton Vice <a1996nton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.1.6"
streamlit = "^1.31.1"
langchain-community = "^0.0.19"
chromadb = "^0.4.22"
tqdm = "^4.66.2"
unstructured = {extras = ["md"], version = "^0.12.4"}
streamlit-chat = "^0.1.1"
fastembed = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
